# lianopy

./: .gitignore  README.md  pyproject.toml  requirements.txt
boilerplate/: app.py  cli.py
boilerplate/static/: index.html
lianopy/: app.py  cli.py
lianopy/static/: app.js  index.html  style.css
